0.4.6
Fixed french help page.
Fixed setting autosave=0 to disable autosave.
Added github website to repo.

0.4.5
Added make-rpm* to make file.
Fixed wrong gtk3 editor menu image.
Deb package fixes.
Standardized plugins.
Fixed notebook tab sizing in gtk3 again!
Fixed URI's in plugin about boxes.
Fixed debian deps in gtk2 deb.
Added make-deb to makefile to create simple installable deb package.
Fixed gtk3 docviewer,
Code clean.
Removed redundant checkboxes from prefs.

0.4.4
Added prefs to session manager plugin to set number of available sessions.
Added auto save to prefs(Admin tab, in minutes).
Minor bug fixes for latest glib etc.
Removed nag screen.
No longer doing releases, so removed update check.

0.4.3
Updated Doxyfile.
More reliable opening of files when doxygen link is clicked.
Requires doxygen version 1.8.14
Various plugin fixes.
Various scripting changes.

0.4.2
Restore session now silently skips missing files.
Doxygen config files should now set "HTML_FILE_EXTENSION = .xhtml" and NOT ".html".
Added custom icons to debug plugin.
Fixed wrong types when calling set/remove user mark.
Added debugger plugin to unstable plugins.
Added "Current Session" to session manager save menu to save current session.
Fixed segfault if LANG env var is unset, defaults to en_GB now.
Added "Vertical Cut" to context menu.
Fixed file opening and conversion with spaces in filename.
Fixed not picking up files to open on command line when using -m switch.
Fixed gtk 3 crash when moving outside tab.
Added 'Vertical Copy' to context menu.
Added Vertical select/copy, hold CTRL key whilst dragging.
Minor code clean for terminal pane plugin.
Fixed seffault when selecting file in browser plugin.
Minor bug fixes.
Fixed yet another api breakage in gtk3 ... for fucks sake leave shit alone guys!
Fixed kkeditmsg-3 trying to open gtk2 version of editor.
Added SessionID number to status bar.
Editor default sessionID for remote control is now desktop number +100.