@@ -54,9 +54,9 @@ menuDataStruct	menuData[]=
 		{MENU_MANPAGE_EDITOR_LABEL,MANPAGEEDITPNG,0,0,(void*)&newEditor,MANEDITORMENUNAME,(gpointer)NEWMANPAGEEDITOR},
 		{MENU_BUILD_DOCS_LABEL,GTK_STOCK_COPY,0,0,(void*)&doDoxy,DOXYBUILDMENUNAME,(gpointer)1},
 		{MENU_RECENT_FILES_LABEL,NULL,0,0,NULL,RECENTMENUNAME,NULL},
-		{MENU_SAVE_LABEL,GTK_STOCK_SAVE,GDK_KEY_S,GDK_CONTROL_MASK,(void*)&saveFile,SAVEMENUNAME,NULL},
+		{MENU_SAVE_LABEL,GTK_STOCK_SAVE,GDK_KEY_S,GDK_CONTROL_MASK,(void*)&saveFile,SAVEMENUNAME,(void*)0},
 		{MENU_SAVE_AS_LABEL,GTK_STOCK_SAVE_AS,GDK_KEY_S,GDK_CONTROL_MASK+GDK_SHIFT_MASK,(void*)&saveFile,SAVEASMENUNAME,(void*)1},
-		{MENU_SAVE_ALL_LABEL,GTK_STOCK_SAVE,0,0,(void*)&doSaveAll,SAVEALLMENUNAME,NULL},
+		{MENU_SAVE_ALL_LABEL,GTK_STOCK_SAVE,0,0,(void*)&doSaveAll,SAVEALLMENUNAME,(void*)0},
 		{MENU_SAVE_SESSION_LABEL,GTK_STOCK_SAVE,0,0,(void*)&saveSession,SAVESESSIONMENUNAME,NULL},
 		{MENU_RESTORE_SESSION_LABEL,GTK_STOCK_OPEN,0,0,(void*)&restoreSession,RESTORESESSIONMENUNAME,NULL},
 		{MENU_PRINT_LABEL,GTK_STOCK_PRINT,GDK_KEY_P,GDK_CONTROL_MASK,(void*)&printFile,PRINTMENUNAME,NULL},
