@@ -50,7 +50,7 @@ struct	menuDataStruct
 extern menuDataStruct	menuData[];
 
 enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,BEKIND,GLOBALPLUGMENU,AUTOSEARCH,SHOWWHITESPACE,DOCINEDITOR,SHOWMENUICONS,MAXPREFSWIDGETS};
-enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXBMWIDTH,NOTETABSSIZE,MAXJUMPHISTORY,SAVEPERIOD,MAXPREFSINTWIDGETS};
+enum	{MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXBMWIDTH,NOTETABSSIZE,MAXJUMPHISTORY,SAVEPERIOD,MAXPREFSINTWIDGETS};
 
 extern	GtkWidget	*prefsWidgets[MAXPREFSWIDGETS];
 extern	GObject		*prefsIntWidgets[MAXPREFSINTWIDGETS];
