@@ -1,6 +1,6 @@
 #
 #
-AC_INIT([KKEdit],[0.4.5],[PROJ],[KKEdit])
+AC_INIT([KKEdit],[0.4.6],[PROJ],[KKEdit])
 
 AC_CONFIG_HEADER([config.h])
 AC_PROG_CXX
